# Copyright 2023 The Firefly Authors.
#
# Use of this source code is governed by a BSD 3-clause
# license that can be found in the LICENSE file.

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//tools/ruse/bazel:rules.bzl", "ruse_standard_library")

go_library(
    name = "ruse_lib",
    srcs = [
        "main.go",
    ],
    importpath = "firefly-os.dev/tools/ruse",
    visibility = ["//visibility:private"],
    deps = [
        "//tools/ruse/cmd/compile",
        "//tools/ruse/cmd/compile-stdlib",
        "//tools/ruse/cmd/debug",
        "//tools/ruse/cmd/link",
        "//tools/ruse/cmd/rpkg",
    ],
)

go_binary(
    name = "ruse",
    embed = [":ruse_lib"],
    visibility = ["//visibility:public"],
)

ruse_standard_library(
    name = "stdlib",
    arch = "x86-64",
    package_path = "stdlib",
    visibility = ["//visibility:public"],
    deps = [
        "//tools/ruse/stdlib/sections",
    ],
)
