# Copyright 2022 The Firefly Authors.
#
# Use of this source code is governed by a BSD 3-clause
# license that can be found in the LICENSE file.

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "update-deps_lib",
    srcs = [
        "main.go",
        "vendored.go",
    ],
    importpath = "firefly-os.dev/tools/update-deps",
    visibility = ["//visibility:private"],
    deps = [
        "//tools/simplehttp",
        "//tools/vendeps",
        "//vendor/go/github.com/bazelbuild/buildtools/build",
        "//vendor/go/golang.org/x/mod/semver",
    ],
)

go_binary(
    name = "update-deps",
    embed = [":update-deps_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "update-deps_test",
    size = "small",
    srcs = [
        "fields_test.go",
    ],
    data = glob(["testdata/*"]),
    embed = [":update-deps_lib"],
    deps = [
        "//vendor/go/github.com/bazelbuild/buildtools/build",
        "//vendor/go/golang.org/x/time/rate",
    ],
)
