# Copyright 2022 The Firefly Authors.
#
# Use of this source code is governed by a BSD 3-clause
# license that can be found in the LICENSE file.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("//bazel/gofmt:gofmt.bzl", "gofmt")

go_library(
    name = "vendeps",
    srcs = [
        "actions.go",
        "cache.go",
        "check.go",
        "digest.go",
        "go.go",
        "license.go",
        "patch.go",
        "rust.go",
        "templates.go",
        "updates.go",
        "vendeps.go",
        "vendor.go",
    ],
    embedsrcs = glob(["templates/**"]),
    importpath = "firefly-os.dev/tools/vendeps",
    visibility = ["//visibility:public"],
    deps = [
        "//tools/simplehttp",
        "//tools/starlark",
        "//vendor/go/github.com/bazelbuild/buildtools/build",
        "//vendor/go/golang.org/x/mod/module",
        "//vendor/go/golang.org/x/mod/semver",
        "//vendor/go/golang.org/x/mod/sumdb",
        "//vendor/go/golang.org/x/mod/sumdb/dirhash",
        "//vendor/go/golang.org/x/mod/zip",
    ],
)

gofmt(
    name = "gofmt",
    embed = [":vendeps"],
)

go_test(
    name = "vendeps_test",
    size = "small",
    srcs = [
        "cache_test.go",
        "digest_test.go",
        "license_test.go",
        "templates_test.go",
        "updates_test.go",
        "vendor_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":vendeps"],
    deps = [
        "//vendor/go/rsc.io/diff",
    ],
)
