# Copyright 2022 The Firefly Authors.
#
# Use of this source code is governed by a BSD 3-clause
# license that can be found in the LICENSE file.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "vendeps",
    srcs = [
        "actions.go",
        "cache.go",
        "digest.go",
        "go.go",
        "license.go",
        "patch.go",
        "templates.go",
        "updates.go",
        "vendeps.go",
        "vendor.go",
    ],
    embedsrcs = glob(["templates/**"]),
    importpath = "firefly-os.dev/tools/vendeps",
    visibility = ["//visibility:public"],
    deps = [
        "//tools/gomodproxy",
        "//tools/simplehttp",
        "//tools/starlark",
        "//vendor/github.com/bazelbuild/buildtools/build",
        "//vendor/golang.org/x/mod/semver",
    ],
)

go_test(
    name = "vendeps_test",
    size = "small",
    srcs = [
        "cache_test.go",
        "digest_test.go",
        "license_test.go",
        "templates_test.go",
        "updates_test.go",
        "vendor_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":vendeps"],
    deps = [
        "//vendor/rsc.io/diff",
    ],
)
