# Copyright 2022 The Firefly Authors.
#
# Use of this source code is governed by a BSD 3-clause
# license that can be found in the LICENSE file.

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "vendor-deps_lib",
    srcs = [
        "actions.go",
        "main.go",
        "templates.go",
        "vendor.go",
    ],
    embedsrcs = glob(["templates/**"]),
    importpath = "firefly-os.dev/tools/vendor-deps",
    visibility = ["//visibility:private"],
    deps = [
        "//tools/starlark",
        "//tools/vendeps",
    ],
)

go_test(
    name = "vendor-deps_test",
    size = "small",
    srcs = [
        "templates_test.go",
        "vendor_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":vendor-deps_lib"],
    deps = [
        "//vendor/rsc.io/diff",
    ],
)

go_binary(
    name = "vendor-deps",
    embed = [":vendor-deps_lib"],
    visibility = ["//visibility:public"],
)
